storage/innobase/handler/ha_innodb.cc
@@ -6468,9 +6468,12 @@ no_such_table:
 		if (alloc) {
 			trx = trx_allocate_for_background();
 		}
+		ut_ad(!trx->persistent_stats);
+		ut_d(trx->persistent_stats = true);
 		++trx->will_lock;
 		dict_stats_init(ib_table, trx);
 		innobase_commit_low(trx);
+		ut_d(trx->persistent_stats = false);
 		if (alloc) {
 			trx_free_for_background(trx);
 		}
@@ -14592,6 +14595,7 @@ ha_innobase::info_low(
 			on the mysql.innodb_table_stats,
 			mysql.innodb_index_stats tables. */
 			trx_t* trx = trx_allocate_for_background();
+			ut_d(trx->persistent_stats = true);
 			++trx->will_lock;
 			ret = dict_stats_update(ib_table, opt, trx);
 
@@ -14604,6 +14608,7 @@ ha_innobase::info_low(
 				trx_commit_for_mysql(trx);
 			}
 
+			ut_d(trx->persistent_stats = false);
 			trx_free_for_background(trx);
 
 			if (ret != DB_SUCCESS) {
